# global-capacity-orchestrator-on-aws

./: .checkov.yaml  .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .kics.yaml  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .semgrepignore  .trivyignore  .yamllint.yml  ACKNOWLEDGMENTS.md  CONTRIBUTING.md  Dockerfile.dev  QUICKSTART.md  README.md  app.py  cdk.json  pyproject.toml  pytest.ini  requirements-lock.txt
.github/: CI.md  CODEOWNERS  README.md  SECURITY.md  dependabot.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: README.md  bug_report.md  config.yml  feature_request.md
.github/actions/: README.md
.github/codeql/: README.md  codeql-config.yml
.github/kind/: README.md  kind-calico.yaml
.github/oidc_provider/: README.md  app.py  cdk.json  policy.json  stack.py
.github/scripts/: README.md  dependency-scan.sh  lib_dependency_scan.sh
.github/workflows/: README.md  cve-scan.yml  deps-scan.yml  integration-tests.yml  lint.yml  release.yml  security.yml  unit-tests.yml
cli/: README.md  __init__.py  _container_runtime.py  _image_uri.py  analytics_user_mgmt.py  aws_client.py  config.py  costs.py  dag.py  files.py  images.py  inference.py  jobs.py  kubectl_helpers.py  main.py  models.py  nodepools.py  output.py  stacks.py
cli/capacity/: README.md  __init__.py  advisor.py  checker.py  models.py  multi_region.py
cli/commands/: README.md  __init__.py  analytics_cmd.py  capacity_cmd.py  config_cmd.py  costs_cmd.py  dag_cmd.py  files_cmd.py  images_cmd.py  inference_cmd.py  jobs_cmd.py  models_cmd.py  nodepools_cmd.py  queue_cmd.py  stacks_cmd.py  tasks_cmd.py  templates_cmd.py  webhooks_cmd.py
demo/: DEMO_WALKTHROUGH.md  INFERENCE_WALKTHROUGH.md  LIVE_DEMO.md  README.md  deploy.cast  destroy.cast  lib_demo.sh  live_demo.cast  live_demo.sh  md_to_pdf.py  record_demo.sh  record_deploy.sh  record_destroy.sh
diagrams/: README.md  generate.py
diagrams/code_diagrams/: README.md  _readme.py  _renderer.py  _source_marker.py  _targets.py  app.main.html  generate.py
diagrams/infra_diagrams/: README.md  generate.py
dockerfiles/: README.md  health-monitor-dockerfile  inference-monitor-dockerfile  manifest-processor-dockerfile  queue-processor-dockerfile
docs/: ANALYTICS.md  API.md  ARCHITECTURE.md  CLI.md  CLUSTER_SHARED_BUCKET.md  CONCEPTS.md  CUSTOMIZATION.md  INFERENCE.md  KEDA.md  KUBERAY.md  KUEUE.md  README.md  RUNBOOKS.md  SCHEDULERS.md  SLURM_OPERATOR.md  TROUBLESHOOTING.md  VOLCANO.md  YUNIKORN.md
docs/client-examples/: README.md  aws_cli_examples.sh  curl_sigv4_proxy_example.sh  python_boto3_example.py
docs/iam-policies/: README.md  full-access-policy.json  namespace-restricted-policy.json  read-only-policy.json
examples/: README.md  analytics-database-export-job.yaml  analytics-s3-upload-job.yaml  aurora-pgvector-job.yaml  cluster-shared-bucket-upload-job.yaml  dag-step-preprocess.yaml  dag-step-train.yaml  efa-distributed-training.yaml  efs-output-job.yaml  fsx-lustre-job.yaml  gpu-job.yaml  gpu-timeslicing-job.yaml  inference-sglang.yaml  inference-tgi.yaml  inference-torchserve.yaml  inference-triton.yaml  inference-vllm.yaml  inferentia-job.yaml  keda-scaled-job.yaml  kueue-job.yaml  megatrain-sft-job.yaml  model-download-job.yaml  multi-gpu-training.yaml  pipeline-dag.yaml  ray-cluster.yaml  simple-job.yaml  slurm-cluster-job.yaml  sqs-job-submission.yaml  trainium-job.yaml  valkey-cache-job.yaml  volcano-gang-job.yaml  yunikorn-job.yaml
gco/: README.md  __init__.py  _version.py
gco/config/: __init__.py  config_loader.py
gco/models/: README.md  __init__.py  cluster_models.py  health_models.py  inference_models.py  manifest_models.py
gco/services/: README.md  __init__.py  api_shared.py  auth_middleware.py  health_api.py  health_monitor.py  inference_monitor.py  inference_store.py  manifest_api.py  manifest_processor.py  metrics_publisher.py  queue_processor.py  structured_logging.py  template_store.py  webhook_dispatcher.py
gco/stacks/: README.md  __init__.py  analytics_stack.py  api_gateway_global_stack.py  constants.py  global_stack.py  monitoring_stack.py  nag_suppressions.py  regional_api_gateway_stack.py  regional_stack.py
images/: README.md
lambda/: README.md
lambda/alb-header-validator/: README.md  handler.py
lambda/analytics-cleanup/: README.md  handler.py
lambda/analytics-presigned-url/: handler.py  requirements.txt
lambda/api-gateway-proxy/: README.md  handler.py  requirements.txt
lambda/cross-region-aggregator/: README.md  handler.py  requirements.txt
lambda/drift-detection/: handler.py
lambda/ga-registration/: README.md  handler.py
lambda/helm-installer/: Dockerfile  README.md  charts.yaml  handler.py  (+1 more)
mcp/: README.md  audit.py  audit_middleware.py  feature_flags.py  run_mcp.py  server.py
scripts/: README.md  bump_version.py  dump_nag_findings.py  setup-cluster-access.sh  test-cdk-synthesis.py  test_analytics_lifecycle.py  test_analytics_lifecycle.sh  test_cdk_synthesis.py  test_webhook_delivery.py
tests/: README.md  __init__.py  _analytics_cdk_overlays.py  _analytics_derivations.py  _analytics_strategies.py  _analytics_template_inspectors.py  _cdk_config_matrix.py  _cdk_nag_logger.py  _lambda_imports.py  conftest.py  test_analytics_bucket_isolation_property.py  test_analytics_cleanup_lambda.py  test_analytics_cluster_shared_configmap_property.py  test_analytics_cmd.py  test_analytics_cmd_branches.py  test_analytics_configmap_property.py  test_analytics_default_image.py  test_analytics_examples_validation.py  test_analytics_lifecycle_script.py  test_analytics_roundtrip_property.py  test_analytics_stack.py  test_analytics_user_mgmt.py  test_api_gateway_analytics_config.py  test_api_shared.py  test_auth_middleware.py  test_aws_client.py  test_bug_fixes.py  test_bump_version.py  test_canary.py  test_capacity.py  test_capacity_cmd_coverage.py  test_capacity_reservations.py  test_cdk_config_consumption.py  test_cdk_stacks.py  test_cdk_synthesis_matrix.py  test_cdk_synthesis_script.py  test_cli.py  test_cli_commands.py  test_cli_config.py  test_cli_coverage.py  (+118 more)
(+127 files in other folders)
